--- a/public/locale/ru-ru.json
+++ b/public/locale/ru-ru.json
@@ -86,7 +86,7 @@
         "Restore Default State": "Восстановить состояние таблицы",
         "Error" : "Ошибка",
         "The request failed":"Ошибка запроса",
-        "the object not finded":"объект не найден",
+        "the object not found":"объект не найден",
         "Cad. №:":"Кад.№:",
         "Enter cad.number": "Введите кад.номер",
         "Click to refresh the entire list of documents":"Нажмите, чтобы обновить весь список документов",
