set protected resource

--- a/public/locale/ru-ru.json
+++ b/public/locale/ru-ru.json
@@ -88,6 +88,10 @@
         "The request failed":"Ошибка запроса",
         "the object not found":"объект не найден",
         "Cad. №:":"Кад.№:",
+        "Inv. №:":"Инв.№:",
+        "Address:": "Адрес:",
+        "Created at:": "Создан:",
+        "Modificated at:": "Изменен:",
         "Enter cad.number": "Введите кад.номер",
         "Click to refresh the entire list of documents":"Нажмите, чтобы обновить весь список документов",
         "Refresh":"Обновить",
